DONE index, UPDATED cart, account, faqs, favicon

--- a/account.html
+++ b/account.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Account</title>
+    <title>Account - KACAANG</title>
+
+    <!-- Media Queries/Viewport -->
+    <meta name="viewport" content="width-device-width, initial-scale=1">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,8 +34,6 @@
     <!-- other language -->
     <meta charset="utf-8">
 
-    <!-- Media Queries/Viewport -->
-    <meta name="viewport" content="width-device-width, initial-scale=1">
 
     <!--javascript-->
     <script src="scripts/accountTabs.js"></script>
@@ -44,34 +45,31 @@
         <!--navbar-->
 
         <!--banner-->
-        <div class="bannerclass">
+        <div class="bannerclass text-center">
             <h1>account</h1>
         </div>
         <!--end banner-->
 
         <!--content-->
-        <div>
+        <div class="container">
             <div class="row profile">
-                <div class="col-md-9">
-                    <div class="accountcontainer">
-                        <img src="images/profile.png">
-                        <div class="flex-column ms-4">
-                            <h6 class="mb-2">Lica</h6>
-                            <h6 class="mb-2 light-brown-font">licaloveskacaang@email.com</h6>
-                            <h3 class="mb-2">
-                                150
-                                <img src="images/membership.png">
-                                <span class="h5">Points</span>
-                            </h3>
-                            <h6 class="mb-0 light-brown-font">Referral code: KAC928HB28</h6>
-                        </div>
-                    </div>
+                <div class="col-md-2">
+                    <img src="images/profile.png">
                 </div>
-                <div class="col-md-3 d-flex align-items-end justify-content-end mt-3 mt-md-0">
-                    <div class="accountcontainer">
-                        <i class="fa-regular fa-circle-user"></i>
+                <div class="col-md-6">
+                    <h6>Lica</h6>
+                    <h6 class="light-brown-font">licaloveskacaang@email.com</h6>
+                    <h3>
+                        150
+                        <img src="images/membership.png">
+                        <span class="h5">Points</span>
+                    </h3>
+                    <h6 class="light-brown-font">Referral code: KAC928HB28</h6>
+                </div>
+                <div class="col-md-2"></div>
+                <div class="col-md-2 d-flex align-items-end justify-content-end mt-3 mt-md-0">
+                    <i class="fa-regular fa-circle-user"></i>
                         <p><u>Log Out</u></p>
-                    </div>
                 </div>
             </div>
         </div>
@@ -160,9 +158,80 @@
                     </div>
                 </div>
             </div>
-
-            <!--footer-->
         </div>
+    </div>
+    <!--web footer-->
+    <div class="web-footer">
+        <div class="row-footer">
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+                </div>
+                <div class="col-md-2 offset-md-1">
+                    <a class="footer-link" href="shop.html">SHOP</a> <br>
+                    <a class="footer-link" href="shop.html">SALES</a> <br>
+                    <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
+                    <a class="footer-link" href="faqs.html">FAQS</a>
+                </div>
+                <div class="col-md-3 offset-md-1">
+                    <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
+                    <a class="footer-link" href="farm.html">OUR FARM</a> <br>
+                    <a class="footer-link" href="#">CASHEW CRAZE CLUB</a> <br>
+                    <a class="footer-link" href="contact-us.html">CONTACT US</a> <br>
+                    <div class="icons">
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
+                </div>
+            </div>
+            <div class="copyright">
+                <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+            </div>
+        </div>
+        <img src="images/nuts-banner.png" style="width: 100%;">
+    </div>
+    <!--mobile footer-->
+    <div class="mobile-footer">
+        <div class="row-footer">
+            <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
+                <div class="mobile-footer-links">
+                    <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
+                    <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
+                    <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
+                    <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
+                    <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
+                    <a class="mobile-footer-links" href="farm.html">OUR FARM</a> <br>
+                    <a class="mobile-footer-links" href="#">CASHEW CRAZE CLUB</a> <br>
+                    <a class="mobile-footer-links" href="contact-us.html">CONTACT US</a> <br>
+                    <div class="icons">
+                        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                    </div>
+                </div>
+                <div class="privacy-tandc">
+                    <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
+                    <p style="font-family: 'Comfortaa', sans-serif;
+            color: #EDA23F;
+            font-size: 14px;
+            font-weight: bold;">|</p>
+                    <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+                </div>
+                <div class="copyright">
+                    <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
+                </div>
+        </div>
+        <img src="images/nuts-banner.png" style="width: 100%;">
+    </div>
 </body>
 
 </html>
