--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Check Out</title>
+  <title>Check Out - KACAANG</title>
 
   <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -45,13 +45,13 @@
     <!--navbar-->
 
     <!--banner-->
-    <div class="bannerclass">
+    <div class="bannerclass text-center">
       <h1>checkout</h1>
     </div>
     <!--end banner-->
 
     <!--content-->
-    <div class="container">
+    <div class="container checkout">
       <div class="row">
         <div class="col-md-8">
           <div class="table-responsive">
@@ -67,17 +67,15 @@
                 <th scope="col" class="col-2 text-center">
                   <h6>Total</h6>
                 </th>
-                <th scope="col" class="col-1">
-                  <h6>Remove</h6>
-                </th>
+                <th scope="col" class="col-1"></th>
               </tr>
               <!--item 1-->
               <tr>
-                <td><img src="images/chilli-crab-cashews.png" class="img-fluid rounded-3"></td>
+                <td><img src="images/products/best-chilli-crab-flavoured-cashews.png" class="img-fluid rounded-3"></td>
                 <td class="removesmall">
-                  <p>$4.50</p>
                   <p>Chilli Crab Cashew Nuts</p>
-                  <p>Size: 80g</p>
+                  <p>$4.50 each</p>
+                  <p>Size: 150g</p>
                 </td>
                 <td class="removesmall">
                   <div class="d-flex text-center quantity">
@@ -87,9 +85,9 @@
                   </div>
                 </td>
                 <td class="showonlysmall">
-                  <p>$4.50</p>
                   <p>Chilli Crab Cashew Nuts</p>
-                  <p>Size: 80g</p>
+                  <p>$4.50 each</p>
+                  <p>Size: 150g</p>
                   <div class="d-flex text-center quantity">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
                     <p>1</p>
@@ -101,11 +99,11 @@
               </tr>
               <!--item 2-->
               <tr>
-                <td><img src="images/biscoff-cashews.png" class="img-fluid rounded-3"></td>
+                <td><img src="images/products/best-lotus-biscoff-flavoured-cashews.png" class="img-fluid rounded-3"></td>
                 <td class="removesmall">
-                  <p>$4.50</p>
                   <p>Biscoff Cashew Nuts</p>
-                  <p>Size: 80g</p>
+                  <p>$4.50 each</p>
+                  <p>Size: 150g</p>
                 </td>
                 <td class="removesmall">
                   <div class="d-flex text-center quantity">
@@ -115,9 +113,9 @@
                   </div>
                 </td>
                 <td class="showonlysmall">
-                  <p>$4.50</p>
                   <p>Biscoff Cashew Nuts</p>
-                  <p>Size: 80g</p>
+                  <p>$4.50 each</p>
+                  <p>Size: 150g</p>
                   <div class="d-flex text-center quantity">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
                     <p>1</p>
@@ -129,11 +127,11 @@
               </tr>
               <!--item 3-->
               <tr>
-                <td><img src="images/salted-egg-and-cheese-cashews.png" class="img-fluid rounded-3"></td>
+                <td><img src="images/products/best-salted-egg-cheese-flavoured-cashews.png" class="img-fluid rounded-3"></td>
                 <td class="removesmall">
-                  <p>$4.50</p>
                   <p>Salted Egg Yolk and Cheese Cashew Nuts</p>
-                  <p>Size: 80g</p>
+                  <p>$4.50 each</p>
+                  <p>Size: 150g</p>
                 </td>
                 <td class="removesmall">
                   <div class="d-flex text-center quantity">
@@ -143,9 +141,9 @@
                   </div>
                 </td>
                 <td class="showonlysmall">
-                  <p>$4.50</p>
                   <p>Salted Egg Yolk and Cheese Cashew Nuts</p>
-                  <p>Size: 80g</p>
+                  <p>$4.50 each</p>
+                  <p>Size: 150g</p>
                   <div class="d-flex text-center quantity">
                     <span class="material-symbols-outlined">do_not_disturb_on</span>
                     <p>1</p>
