--- a/reviews.html
+++ b/reviews.html
@@ -32,8 +32,70 @@
 
 </head>
 <body>
+    <!--banner-->
+    <div class="banner">
+        <div class="banner">
+            <img src="images/nav-banner.png" style="width: 100%; vertical-align: top;">
+        </div>
+        <div class="nav-banner">
+            <div class="centered">
+                <a href="index.html"><img src="images/logo.png"></a>
+            </div>
+        </div> 
+    </div>
+    <!--web nav bar-->
+  <div class="web-nav-bar">
+    <div class="row-nav-bar">
+        <div class="row">
+            <div class="nav col-md-10">
+                <a class="nav-links" href="about-us.html">About Us</a>
+                <div class="drop-down">
+                    <a id="shop-link" href="shop.html"></a><button class="btn dropdown-toggle nav-links" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Shop
+                    </button></a>
+                    <div class="dropdown-content">
+                        <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
+                        <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
+                        <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                    </div>
+                </div>
+                <a class="nav-links" href="locate-us.html">Find Us</a>
+                <a class="nav-links" href="contact-us.html">Contact Us</a>
+                <a class="nav-links" href="faqs.html">FAQs</a>
+                <a class="nav-links" href="reviews.html">Reviews</a>  
+            </div>
+            <div class="col-md-1 offset-md-1 nav-icon">
+                <a href="account.html" style="margin-right: 15px;"><i class="nav-icon fa-regular fa-user"></i></a>
+                <a href="cart.html"><i class="nav-icon fa-solid fa-cart-shopping"></i></a>
+            </div>
+        </div>
+    </div>
+    <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+</div> 
+<!--mobile nav bar-->
+<div class="mobile-nav-bar">
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#dropdown-content" role="button" aria-expanded="false" aria-controls="collapseExample">
+        <i class="fa-solid fa-bars"></i>
+    </a>
+    <a class="nav-links" href="account.html" style="margin-left: 60%;"><i class="fa-regular fa-user"></i></a>
+    <a class="nav-links" href="cart.html"><i class="fa-solid fa-cart-shopping" style="margin-left: 60%;"></i></a>
+    <div class="collapse" id="dropdown-content">
+        <div class="card card-body">
+            <div class="accordion-body">
+                <a class="nav-links" href="about-us.html">About Us</a> <br>
+                <a class="nav-links" href="shop.html">Shop</a><br>
+                <a class="nav-links" href="Find Us">Find Us</a><br>
+                <a class="nav-links" href="contact-us.html">Contact Us</a><br>
+                <a class="nav-links" href="faqs.html">FAQs</a><br>
+                <a class="nav-links" href="reviews.html">Reviews</a>
+            </div>
+        </div>
+    </div> 
+    <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
+</div>
+
     <div class="reviews-banner">
-        <img src="images/c3title.png" alt="">
+        <img src="images/favourite-singapore-snack-nuts-banner.png" alt="">
     </div>
     <div class="page-10-percent review-content">
 
@@ -54,11 +116,27 @@
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Name hehe</h4>
-                        <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6">contents of review. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim nec dui nunc mattis enim ut tellus elementum sagittis.
+                        <h4>Emily Haa</h4>
+                        <div class="review-tags"> <h6>Celebrators</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang saved the day! As a party planner, I needed door gifts for an event, and Kacaang not only provided delicious and customizable nut mixes but also expedited the delivery to meet our tight schedule. The guests loved them! A lifesaver for any event planner."
                         <br><br>
-                        21/12/2023
+                        16/11/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>John Hee</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to for guilt-free snacking! The freshness is unmatched, and the ability to customize my nut mix keeps me coming back for more. Highly recommended for fellow snack enthusiasts!"
+                        <br><br>
+                        11/11/2023
                         </h6>
                     </div>
                 </div>
@@ -71,11 +149,11 @@
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Name hehe 2</h4>
+                        <h4>Sarah Lee</h4>
                         <div class="review-tags"> <h6>Club</h6> </div>
-                        <h6 class="review-statements-h6">contents of review. Lorem ipsum dolor sit amet, consectetur adipiscing elit, just to change the length abit.
+                        <h6 class="review-statements-h6">"As a health-conscious foodie, Kacaang is my snack haven. The locally sourced cashews and variety of flavors make it a guilt-free delight. Plus, the C^3 Membership adds that extra nutty incentive! Love the freshness and quality."
                         <br><br>
-                        21/12/2023
+                        04/10/2023
                         </h6>
                     </div>
                 </div>
@@ -87,27 +165,11 @@
                 <div class="col-md-8  review-template-text">
                     <div class="review-text-content">
                         <img src="images/stars.png" alt="">
-                        <h4>Name hehe coroporates slaves </h4>
+                        <h4>Carsome </h4>
                         <div class="review-tags"> <h6>Corporate</h6> </div>
-                        <h6 class="review-statements-h6">contents of review. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        <h6 class="review-statements-h6">"Impressed with the quality and taste of Kacaang nuts! We ordered in bulk for our corporate pantry, and the team couldn't be happier with the variety and freshness. It's become a staple in our office snacking routine."
                         <br><br>
-                        21/12/2023
-                        </h6>
-                    </div>
-                </div>
-            </div>
-            <div class="row g-0 review-template">
-                <div class="col-md-4  review-template-img">
-                    <img src="images/reviews/review-1.png" alt="">
-                </div>
-                <div class="col-md-8  review-template-text">
-                    <div class="review-text-content">
-                        <img src="images/stars.png" alt="">
-                        <h4>Name hehehaha</h4>
-                        <div class="review-tags"> <h6>Celebrators</h6> </div>
-                        <h6 class="review-statements-h6">contents of review. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim nec dui nunc mattis enim ut tellus elementum sagittis.
-                        <br><br>
-                        21/12/2023
+                        09/08/2023
                         </h6>
                     </div>
                 </div>
@@ -116,20 +178,79 @@
         </div>
 
         <div id="r-club" class="tabcontent reviews-tabcontent">
-            <!-- add div when copywriting done -->
-            <p>adding when copywriting done</p>
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>John Hee</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang's nuts are my go-to for guilt-free snacking! The freshness is unmatched, and the ability to customize my nut mix keeps me coming back for more. Highly recommended for fellow snack enthusiasts!"
+                        <br><br>
+                        11/11/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Sarah Lee</h4>
+                        <div class="review-tags"> <h6>Club</h6> </div>
+                        <h6 class="review-statements-h6">"As a health-conscious foodie, Kacaang is my snack haven. The locally sourced cashews and variety of flavors make it a guilt-free delight. Plus, the C^3 Membership adds that extra nutty incentive! Love the freshness and quality."
+                        <br><br>
+                        04/10/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
         <div id="r-corporate" class="tabcontent reviews-tabcontent">
-            <!-- add div when copywriting done -->
-            <p>adding when copywriting done</p>
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Carsome </h4>
+                        <div class="review-tags"> <h6>Corporate</h6> </div>
+                        <h6 class="review-statements-h6">"Impressed with the quality and taste of Kacaang nuts! We ordered in bulk for our corporate pantry, and the team couldn't be happier with the variety and freshness. It's become a staple in our office snacking routine."
+                        <br><br>
+                        09/08/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
         <div id="r-celebrators" class="tabcontent reviews-tabcontent">
-            <!-- add div when copywriting done -->
-            <p>adding when copywriting done</p>
+            <div class="row g-0 review-template">
+                <div class="col-md-4  review-template-img">
+                    <img src="images/reviews/review-1.png" alt="">
+                </div>
+                <div class="col-md-8  review-template-text">
+                    <div class="review-text-content">
+                        <img src="images/stars.png" alt="">
+                        <h4>Emily Haa</h4>
+                        <div class="review-tags"> <h6>Celebrators</h6> </div>
+                        <h6 class="review-statements-h6">"Kacaang saved the day! As a party planner, I needed door gifts for an event, and Kacaang not only provided delicious and customizable nut mixes but also expedited the delivery to meet our tight schedule. The guests loved them! A lifesaver for any event planner."
+                        <br><br>
+                        16/11/2023
+                        </h6>
+                    </div>
+                </div>
+            </div>
 
         </div>
         <!-- end of all tab contents -->
@@ -179,17 +300,17 @@
     <div class="web-footer">
         <div class="row-footer">
             <div class="row">
-                <div class="col-sm-2">
-                    <a href="index.html"><img class="Kacaang-logo" src="images/logo.png"></a>
+                <div class="col-md-2">
+                    <a href="index.html"><img class="kacaang-logo" src="images/logo.png"></a>
                 </div>
-                <div class="col-sm-2 offset-sm-1">
+                <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
                     <a class="footer-link" href="shop.html">SALES</a> <br>
                     <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
                     <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
                     <a class="footer-link" href="faqs.html">FAQS</a>
                 </div>
-                <div class="col-sm-3 offset-sm-1">
+                <div class="col-md-3 offset-md-1">
                     <a class="footer-link" href="about-us.html">OUR STORY</a> <br>
                     <a class="footer-link" href="farm.html">OUR FARM</a> <br>
                     <a class="footer-link" href="#">CASHEW CRAZE CLUB</a> <br>
@@ -201,7 +322,7 @@
                         <a href="#"><i class="fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
-                <div class="col-sm-3">
+                <div class="col-md-3">
                     <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
                     <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
@@ -215,7 +336,7 @@
     <!--mobile footer-->
     <div class="mobile-footer">
         <div class="row-footer">
-            <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
+            <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
                 <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
@@ -234,12 +355,8 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY &nbsp;</a>
-                <p style="font-family: 'Comfortaa', sans-serif;
-                color: #EDA23F;
-                font-size: 14px;
-                font-weight: bold;"></p>
-                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a> <br>
+                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
                 <p class="copyright">COPYRIGHT &copy; 2023 KACAANG. ALL RIGHTS RESERVED.</p>
