solved the 12px issue with scroll bar, linked the navbar for all pages except the on sale

--- a/chillicrab.html
+++ b/chillicrab.html
@@ -56,9 +56,9 @@
                         Shop
                     </button></a>
                     <div class="dropdown-content">
-                        <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
+                        <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
                         <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
-                        <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                        <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                     </div>
                 </div>
                 <a class="nav-links" href="locate-us.html">Find Us</a>
@@ -86,7 +86,7 @@
             <div class="accordion-body">
                 <a class="nav-links" href="about-us.html">About Us</a> <br>
                 <a class="nav-links" href="shop.html">Shop</a><br>
-                <a class="nav-links" href="Find Us">Find Us</a><br>
+                <a class="nav-links" href="find-us.html">Find Us</a><br>
                 <a class="nav-links" href="contact-us.html">Contact Us</a><br>
                 <a class="nav-links" href="faqs.html">FAQs</a><br>
                 <a class="nav-links" href="reviews.html">Reviews</a>
