--- a/shop.html
+++ b/shop.html
@@ -51,12 +51,12 @@
                           Shop
                       </button></a>
                       <div class="dropdown-content">
-                          <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
+                          <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
                           <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
-                          <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                          <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                       </div>
                   </div>
-                  <a class="nav-links" href="locate-us.html">Find Us</a>
+                  <a class="nav-links" href="find-us.html">Find Us</a>
                   <a class="nav-links" href="contact-us.html">Contact Us</a>
                   <a class="nav-links" href="faqs.html">FAQs</a>
                   <a class="nav-links" href="reviews.html">Reviews</a>  
